--- a/LED/LED_bright.html
+++ b/LED/LED_bright.html
@@ -3,40 +3,40 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<title>Switch LED</title>
+<title>LED bright</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="https://webduino.io/components/webduino-js/dist/webduino-all.min.js"></script>
 <script src="https://blockly.webduino.io/webduino-blockly.js"></script>
 <script src="https://blockly.webduino.io/lib/runtime.min.js"></script>
 <style>
 #light img {
-  height: 200px;
-  display: none;
-  pointer-events: auto !important;
+    height: 200px;
+    display: none;
+    pointer-events: auto !important;
 }
 
 #light.off #light_off, #light.on #light_on {
-  display: inline-block;
-  pointer-events: auto !important;
+    display: inline-block;
+    pointer-events: auto !important;
 }
 </style>
 </head>
 
 <body>
 <div id="light" class="off">
-  <img src="https://blockly.webduino.io/media/off.jpg" id="light_off">
-  <img src="https://blockly.webduino.io/media/on.jpg" id="light_on">
+    <img src="https://blockly.webduino.io/media/off.jpg" id="light_off">
+    <img src="https://blockly.webduino.io/media/on.jpg" id="light_on">
 </div>
 
 <script>
 var led;
 
 boardReady({device: 'wa8w'}, board => {
-  board.systemReset();
-  board.samplingInterval = 250;
-  led = getLed(board, 13);
-  led.on();
-  document.getElementById("light").className = "on";
+    board.systemReset();
+    board.samplingInterval = 250;
+    led = getLed(board, 13);
+    led.on();
+    document.getElementById("light").className = "on";
 });
 </script>
 </body>
