Add Auto_Switch_Yellow-Red_LED Note, image

--- a/LED/Auto_Switch_Yellow-Red_LED.html
+++ b/LED/Auto_Switch_Yellow-Red_LED.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<title>Click Switch Yellow & Red LED</title>
+<title>Auto Switch Yellow & Red LED</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="https://webduino.io/components/webduino-js/dist/webduino-all.min.js"></script>
 <script src="https://blockly.webduino.io/webduino-blockly.js"></script>
@@ -40,11 +40,11 @@ boardReady({device: 'wa8w'}, board => {
     led_red.off();
     led_yellow.on();
     light.className = "off";
-    light.addEventListener("click", () => {
+    setInterval(() => {
         led_red.toggle();
         led_yellow.toggle();
         light.className = light.className == "on" ? "off" : "on";
-    });
+    }, 2000);
 });
 </script>
 </body>
