--- a/RGB_LED/RGB_LED_Colorful_Neon_lighting.html
+++ b/RGB_LED/RGB_LED_Colorful_Neon_lighting.html
@@ -10,9 +10,7 @@
 <script src="https://blockly.webduino.io/lib/runtime.min.js"></script>
 <style>
 #light img {height: 200px; display: none;}
-#light.off img:first-child, #light.on img:last-child {
-  display: inline-block;
-}
+#light.off img:first-child, #light.on img:last-child {display: inline-block;}
 #show {
     margin-top: 5px;
     width: 150px;
