--- a/LED/Auto_Switch_Yellow-Red_LED.html
+++ b/LED/Auto_Switch_Yellow-Red_LED.html
@@ -9,11 +9,7 @@
 <script src="https://blockly.webduino.io/webduino-blockly.js"></script>
 <script src="https://blockly.webduino.io/lib/runtime.min.js"></script>
 <style>
-#light img {
-    height: 200px;
-    display: none;
-}
-
+#light img {height: 200px; display: none;}
 #light.off #light_off, #light.on #light_on {display: inline-block;}
 </style>
 </head>
