--- a/LED/Click_Switch_Yellow-Red_LED.html
+++ b/LED/Click_Switch_Yellow-Red_LED.html
@@ -9,16 +9,8 @@
 <script src="https://blockly.webduino.io/webduino-blockly.js"></script>
 <script src="https://blockly.webduino.io/lib/runtime.min.js"></script>
 <style>
-#light img {
-    height: 200px;
-    display: none;
-    pointer-events: auto !important;
-}
-
-#light.off #light_off, #light.on #light_on {
-    display: inline-block;
-    pointer-events: auto !important;
-}
+#light img {height: 200px; display: none;}
+#light.off #light_off, #light.on #light_on {display: inline-block;}
 </style>
 </head>
 
