--- a/LED/Switch_LED.html
+++ b/LED/Switch_LED.html
@@ -9,16 +9,8 @@
 <script src="https://blockly.webduino.io/webduino-blockly.js"></script>
 <script src="https://blockly.webduino.io/lib/runtime.min.js"></script>
 <style>
-#light img {
-    height: 200px;
-    display: none;
-    pointer-events: auto !important;
-}
-
-#light.off #light_off, #light.on #light_on {
-    display: inline-block;
-    pointer-events: auto !important;
-}
+#light img {height: 200px; display: none;}
+#light.off #light_off, #light.on #light_on {display: inline-block;}
 </style>
 </head>
 
@@ -35,7 +27,7 @@ var light = document.getElementById("light");
 boardReady({device: 'wa8w'}, board => {
     board.systemReset();
     board.samplingInterval = 250;
-    led = getLed(board, 13);
+    led = getLed(board, 10);
     led.off();
     light.className = "off";
     light.addEventListener("click", () => {
