--- a/LED/Auto_Switch_Yellow-Red_LED.html
+++ b/LED/Auto_Switch_Yellow-Red_LED.html
@@ -16,8 +16,8 @@
 
 <body>
 <div id="light" class="off">
-    <img src="https://blockly.webduino.io/media/off.jpg" id="light_off">
-    <img src="https://blockly.webduino.io/media/on.jpg" id="light_on">
+    <img src="../image/light-off.jpg" id="light_off">
+    <img src="../image/light-on.jpg" id="light_on">
 </div>
 
 <script>
