--- a/RGB_LED/RGB_LED_Colorful_Neon_lighting.html
+++ b/RGB_LED/RGB_LED_Colorful_Neon_lighting.html
@@ -10,20 +10,14 @@
 <script src="https://blockly.webduino.io/lib/runtime.min.js"></script>
 <style>
 #light img {height: 200px; display: none;}
-#light.off img:first-child, #light.on img:last-child {display: inline-block;}
-#show {
-    margin-top: 5px;
-    width: 150px;
-    height: 80px;
-    background: #ccc;
-}
+#light.off #light_off, #light.on #light_on {display: inline-block;}
 </style>
 </head>
 
 <body>
 <div id="light" class="off">
-    <img src="http://i.imgur.com/T5H4MHE.png">
-    <img src="http://i.imgur.com/8qFj2Ou.png">
+    <img src="../image/light-off.jpg" id="light_off">
+    <img src="../image/light-on.jpg" id="light_on">
 </div>
 
 <script>
@@ -38,11 +32,11 @@ boardReady({device: 'wa8w'}, board => {
     light.setAttribute("class","off");
     light.addEventListener("click", () => {
         if (light.getAttribute("class") == "off") {
-            light.setAttribute("class", "on");
+            light.className = "on";
             rgbled.setColor('#000');
             repeat();
         } else {
-            light.setAttribute("class", "off");
+            light.className = "off";
             rgbled.setColor('#000');
             clearTimeout(timer);
         }
