--- a/Humidity_Temperature_(DHT11)/Humidity_Temperature-Firebase.html
+++ b/Humidity_Temperature_(DHT11)/Humidity_Temperature-Firebase.html
@@ -24,7 +24,7 @@ boardReady({device: 'kzpV'}, board => {
     board.systemReset();
     board.samplingInterval = 20;
     dht = getDht(board, 10);
-    myFirebase = new Firebase("https://<Your-firebase>.firebaseio.com/");
+    myFirebase = new Firebase("https://<Your-Firebase>.firebaseio.com/");
     dht.read(evt => {
         temperature.innerHTML = dht.temperature;
         humidity.innerHTML = dht.humidity;
